crates/formatter/tests/snapshots/snapshots__coder__migrations__000314_prebuilds.down.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
-- Revert prebuild views
drop view if exists workspace_prebuild_builds;
drop view if exists workspace_prebuilds;
drop view if exists workspace_latest_builds;
