crates/formatter/tests/snapshots/snapshots__coder__migrations__000318_update_protect_deleting_orgs_to_filter_deleted_users.up.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
drop trigger if exists protect_deleting_organizations on organizations;

-- Replace the function with the new implementation
create or replace function protect_deleting_organizations()
returns trigger
language plpgsql
as $$
declare
	workspace_count int;
	template_count int;
	group_count int;
	member_count int;
	provisioner_keys_count int;
begin
	workspace_count := (
		select count(*) as count
		from workspaces
		where workspaces.organization_id = OLD.id and workspaces.deleted = false
	);

	template_count := (
		select count(*) as count
		from templates
		where templates.organization_id = OLD.id and templates.deleted = false
	);

	group_count := (
		select count(*) as count
		from groups
		where groups.organization_id = OLD.id
	);

	member_count := (
		select count(*) as count
		from organization_members
			left join users on users.id = organization_members.user_id
		where
			organization_members.organization_id = OLD.id and users.deleted = false
	);

	provisioner_keys_count := (
		select count(*) as count
		from provisioner_keys
		where provisioner_keys.organization_id = OLD.id
	);

	-- Fail the deletion if one of the following:
	-- * the organization has 1 or more workspaces
	-- * the organization has 1 or more templates
	-- * the organization has 1 or more groups other than "Everyone" group
	-- * the organization has 1 or more members other than the organization owner
	-- * the organization has 1 or more provisioner keys

	-- Only create error message for resources that actually exist
	if (workspace_count + template_count + provisioner_keys_count) > 0 then
		declare
			error_message text := 'cannot delete organization: organization has ';
			error_parts text[] := '{}';
		begin
			if workspace_count > 0 then
				error_parts := array_append(
					error_parts,
					workspace_count || ' workspaces'
				);
			end if;

			if template_count > 0 then
				error_parts := array_append(
					error_parts,
					template_count || ' templates'
				);
			end if;

			if provisioner_keys_count > 0 then
				error_parts := array_append(
					error_parts,
					provisioner_keys_count || ' provisioner keys'
				);
			end if;

			error_message := error_message
				|| array_to_string(error_parts, ', ')
				|| ' that must be deleted first';
			raise exception '%', error_message;
		end;
	end if;

	if (group_count) > 1 then
		raise exception 'cannot delete organization: organization has % groups that must be deleted first',
		group_count - 1;
	end if;

	-- Allow 1 member to exist, because you cannot remove yourself. You can
	-- remove everyone else. Ideally, we only omit the member that matches
	-- the user_id of the caller, however in a trigger, the caller is unknown.
	if (member_count) > 1 then
		raise exception 'cannot delete organization: organization has % members that must be deleted first',
		member_count - 1;
	end if;

	return NEW;
end;
$$;

-- Trigger to protect organizations from being soft deleted with existing resources
create trigger protect_deleting_organizations
	before update on organizations
	for each row
	when (NEW.deleted = true and OLD.deleted = false)
	execute function protect_deleting_organizations();
