crates/formatter/tests/snapshots/snapshots__coder__migrations__000321_add_parent_id_to_workspace_agents.down.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
alter table workspace_agents drop column if exists parent_id;
