crates/formatter/tests/snapshots/snapshots__coder__migrations__000323_workspace_latest_builds_optimization.down.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
drop view workspace_prebuilds;
drop view workspace_latest_builds;

-- Revert to previous version from 000314_prebuilds.up.sql
create view workspace_latest_builds as
select distinct on (workspace_id)
	wb.id,
	wb.workspace_id,
	wb.template_version_id,
	wb.job_id,
	wb.template_version_preset_id,
	wb.transition,
	wb.created_at,
	pj.job_status
from workspace_builds wb inner join provisioner_jobs pj on wb.job_id = pj.id
order by wb.workspace_id, wb.build_number desc;

-- Recreate the dependent views
create view workspace_prebuilds as
with
	all_prebuilds as (
		select w.id, w.name, w.template_id, w.created_at
		from workspaces w
		where (w.owner_id = 'c42fdf75-3097-471c-8c33-fb52454d81c0'::uuid)
	),
	workspaces_with_latest_presets as (
		select distinct on (workspace_builds.workspace_id)
			workspace_builds.workspace_id, workspace_builds.template_version_preset_id
		from workspace_builds
		where (workspace_builds.template_version_preset_id is not null)
		order by workspace_builds.workspace_id, workspace_builds.build_number desc
	),
	workspaces_with_agents_status as (
		select
			w.id as workspace_id,
			bool_and(
				(wa.lifecycle_state = 'ready'::workspace_agent_lifecycle_state)
			) as ready
		from (
			(
				(
					workspaces w
						join workspace_latest_builds wlb on ((wlb.workspace_id = w.id))
				)
					join workspace_resources wr on ((wr.job_id = wlb.job_id))
			)
				join workspace_agents wa on ((wa.resource_id = wr.id))
		)
		where (w.owner_id = 'c42fdf75-3097-471c-8c33-fb52454d81c0'::uuid)
		group by w.id
	),
	current_presets as (
		select w.id as prebuild_id, wlp.template_version_preset_id
		from (
			workspaces w
				join workspaces_with_latest_presets wlp on ((wlp.workspace_id = w.id))
		)
		where (w.owner_id = 'c42fdf75-3097-471c-8c33-fb52454d81c0'::uuid)
	)
select
	p.id,
	p.name,
	p.template_id,
	p.created_at,
	coalesce(a.ready, false) as ready,
	cp.template_version_preset_id as current_preset_id
from (
	(
		all_prebuilds p
			left join workspaces_with_agents_status a on ((a.workspace_id = p.id))
	)
		join current_presets cp on ((cp.prebuild_id = p.id))
);
