crates/formatter/tests/snapshots/snapshots__coder__migrations__000326_add_api_key_scope_to_workspace_agents.down.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
-- Remove the api_key_scope column from the workspace_agents table
alter table workspace_agents drop column if exists api_key_scope;

-- Drop the enum type for API key scope
drop type if exists agent_key_scope_enum;
